# PointSetProcessing

./: CMakeLists.txt  License.txt  README.md  vtkEuclideanMinimumSpanningTree.cxx  vtkEuclideanMinimumSpanningTree.h  vtkEuclideanMinimumSpanningTreeExample.cxx  vtkKNNGraphFilter.cxx  vtkKNNGraphFilter.h  vtkPointSetCurvatureEstimation.cxx  vtkPointSetCurvatureEstimation.h  vtkPointSetCurvatureEstimationExample.cxx  vtkPointSetCurvatureEstimationTest.cxx  vtkPointSetNormalEstimation.cxx  vtkPointSetNormalEstimation.h  vtkPointSetNormalEstimationExample.cxx  vtkPointSetNormalOrientation.cxx  vtkPointSetNormalOrientation.h  vtkPointSetNormalOrientation.xml  vtkPointSetNormalOrientationExample.cxx  vtkPointSetNormalOrientationToPoint.cxx  vtkPointSetNormalOrientationToPoint.h  vtkPointSetOutlierRemoval.cxx  vtkPointSetOutlierRemoval.h  vtkPointSetOutlierRemoval.xml  vtkPointSetOutlierRemovalData.cxx  vtkPointSetOutlierRemovalExample.cxx  vtkRiemannianGraphFilter.cxx  vtkRiemannianGraphFilter.h  vtkRiemannianGraphFilterExample.cxx
Data/: SpherePoints.vtp
Examples/: CMakeLists.txt  EuclideanMinimumSpanningTree.cpp  GenerateData.cpp  GenerateOutlierData.cpp  PointSetCurvatureEstimation.cpp  PointSetNormalEstimation.cpp  PointSetNormalOrientation.cpp  PointSetNormalOrientationToPoint.cpp  PointSetOutlierRemoval.cpp  RiemannianGraphFilter.cpp
GUI/: CMakeLists.txt  PointSetProcessing.cpp  PointSetProcessingWidget.cpp  PointSetProcessingWidget.h  PointSetProcessingWidget.ui  VTKComputationThread.h  VTKComputationThread.hxx
GUI/Widgets/: CMakeLists.txt  CoordinateEditWidget.cpp  CoordinateEditWidget.h  CoordinateEditWidget.ui  Example.cpp  ExampleWidget.cpp  ExampleWidget.h  ExampleWidget.ui  FloatSlider.cpp  FloatSlider.h  FloatSliderPlugin.cpp  FloatSliderPlugin.h  FloatSliderPlugin.pro  LabeledSlider.cpp  LabeledSlider.h  LabeledSlider.ui  LabeledSliderPlugin.cpp  LabeledSliderPlugin.h
ParaViewPlugins/: CMakeLists.txt  vtkPointSetCurvatureEstimation.xml  vtkPointSetNormalEstimation.xml
Tests/: CMakeLists.txt  TestEuclideanMinimumSpanningTree.cxx  TestPointSetCurvatureEstimation.cxx  TestPointSetNormalEstimation.cxx  TestPointSetNormalOrientation.cxx  TestPointSetNormalOrientationToPoint.cxx  TestPointSetOutlierRemoval.cxx  TestRiemannianGraphFilter.cxx
